# quadletman

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  Vagrantfile  Vagrantfile.template  babel.cfg  index.html  install.sh  mkdocs.yml  package-lock.json  package.json  pyproject.toml  quadletman.service  run_dev.sh  sitemap.xml  tailwind.config.js
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  podman-watch.yml  release.yml
architecture/: index.html
development/: index.html
docs/: architecture.md  development.md  features.md  governance.md  index.md  license.md  localization.md  packaging.md  product_development.md  quadlet-field-reference.md  runbook.md  security.md  testing.md  third-party-licenses.md  ui-development.md  upstream_monitoring.md  ways-of-working.md
features/: index.html
governance/: index.html
license/: index.html
localization/: index.html
packaging/: build-deb.sh  build-rpm.sh  build-source.sh  index.html  quadletman.env  smoke-test-all.sh  smoke-test-vm-deb.sh  smoke-test-vm.sh  vm-provision.sh
packaging/debian/: changelog  control  copyright  rules  (+4 more)
quadlet-field-reference/: index.html
quadletman/: auth.py  config.py  database.py  i18n.py  main.py  models.py  podman.py  podman_version.py  sanitized.py  session.py  templates_config.py  utils.py
runbook/: index.html
scripts/: cleanup_qm_users.sh  install.sh  podman_feature_check.py  publish-repo.sh  repo-gpg-key.sh  run_dev.sh  security_review.py
search/: search_index.json
security/: index.html
testing/: index.html
tests/: conftest.py  test_architecture.py  test_auth.py  test_bundle_parser.py  test_database.py  test_db_sanitize.py  test_field_choices.py  test_field_constraints.py  test_i18n.py  test_keyring.py  test_models.py  test_podman.py  test_podman_version.py  test_sanitized.py  test_session.py  test_settings.py  test_version_span.py
third-party-licenses/: index.html
ui-development/: index.html
upstream_monitoring/: index.html
ways-of-working/: index.html
(+242 files in other folders)
